# omglol

./: .env.example  .gitignore  .sync_state.json  CLAUDE.md  README.md  main.py  omglol.py  pyproject.toml  sync_wortfreunde.py  test_omglol.py
docs/: getting-started.md
