[project]
name = "omglol-api"
version = "0.1.0"
description = "Python client for the omg.lol API — weblog, pastebin, PURLs, statuslog, DNS, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["omg.lol", "weblog", "api-client", "pastebin", "statuslog"]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dkd-dobberkau/omglol"
Repository = "https://github.com/dkd-dobberkau/omglol"
Issues = "https://github.com/dkd-dobberkau/omglol/issues"

[project.scripts]
omglol = "omglol:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omglol.py"]

[tool.pytest.ini_options]
testpaths = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "responses>=0.26.0",
]
